// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages component renders UI when message count is zero 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`Messages component renders the UI as expected2 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders UI when message count is zero 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected2 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;
